# curl-impersonate

./: Makefile.in  Makefile.win  README.md  configure  configure.ac
.github/workflows/: build-and-test-docker.yml  build-and-test-make.yml  build-android.yaml  build-win.yaml  publish-docker-image.yml
chrome/: curl_chrome123  curl_chrome123_linux
chrome/patches/: boringssl-disable-arm-cpu-test.patch  boringssl-old-ciphers.patch  boringssl.patch  curl-impersonate.patch
docker/: alpine.dockerfile  debian.dockerfile  dockerfile.mustache
firefox/patches/: curl-impersonate.patch
scripts/: build_linux.sh
tests/: requirements.txt  targets.yaml  test_impersonate.py
tests/signatures/: chrome_123.0.6312.86_win10.yaml
win/: build.sh
zigshim/: ar
